# agenttrust

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/paper/: agenttrust-research-paper.md  paper-style.css
src/agenttrust/: __init__.py  abg.py  cli.py  comply.py  config.py  fingerprint.py  identity.py  merkle.py  models.py  observe.py  patterns.py  protect.py  scoring.py
src/agenttrust/integrations/: __init__.py  autogen.py  crewai.py  langchain.py
tests/: test_abg.py  test_cli.py  test_comply.py  test_comply_merkle.py  test_fingerprint.py  test_handshake.py  test_identity.py  test_merkle.py  test_observe.py  test_observe_abg.py  test_protect.py  test_sequence.py
web/: generate_demo.py  index.html  serve.py
